--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -75,6 +75,7 @@ jobs:
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
   
   docker:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -85,8 +86,8 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            name/app
-            ghcr.io/username/app            
+            etxean/atagone2mqtt
+            ghcr.io/etxeannet/atagone2mqtt
           # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule
