--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [tool.poetry]
 name = "atagmqtt"
-version = "0.5.8"
+version = "0.5.9"
 description = "AtagOne to MQTT bridge"
 authors = ["Ard Kuijpers <ardkuijpers@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
 # homie4 = "^0.4.0"
-homie4 = { path = "packages/homie4-0.4.1-py3-none-any.whl" }
+homie4 = { path = "packages/homie4-0.4.2-py3-none-any.whl" }
 paho-mqtt = ">1.3.0,<2"
 pydantic-settings = "^2.2.0"
 aiohttp = "^3.9.4"
